--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     image: postgres:13
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: yourdbname
+      POSTGRES_PASSWORD: Devi123
+      POSTGRES_DB: my_finance
     volumes:
       - pgdata:/var/lib/postgresql/data
 volumes:
