--- a/finance/Dockerfile
+++ b/finance/Dockerfile
@@ -6,7 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 # Nginx to serve frontend in root folder we have nginx config file 
-FROM nginx:alpine
+FROM nginx
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
